
add_library(dlclose SHARED dlclose.c)

target_include_directories(dlclose
  INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
  PRIVATE   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
  PRIVATE   $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
  PRIVATE   $<BUILD_INTERFACE:${CWP_BINARY_DIR}>
  PUBLIC    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
  PUBLIC    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>
  PUBLIC    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/new>
)